--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -9,7 +9,7 @@ on:
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: "pages"
+  group: "page-deployment"
   cancel-in-progress: false
 
 jobs:
@@ -19,12 +19,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: FTP Deployment
-        # You may pin to the exact commit or the version.
-        # uses: airvzxf/ftp-deployment-action@9efe025c218094bd451a0cb684d7cb471f4d9d4f
         uses: airvzxf/ftp-deployment-action@latest
         with:
           server: ttvbuehlertal.de
-          user: 'empty'
-          password: 'empty'
+          user: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
           # Delete all the files inside of the remote directory.
           delete: true # optional, default is false
