--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -18,11 +18,34 @@ jobs:
       name: ftp-deplyoment
     runs-on: ubuntu-latest
     steps:
-      - name: FTP Deployment
-        uses: airvzxf/ftp-deployment-action@latest
+      - name: FTP Deploy
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
+          # ftp server
           server: ttvbuehlertal.de
-          user: ${{ secrets.FTP_USERNAME }}
+          # ftp username
+          username: ${{ secrets.FTP_USERNAME }}
+          # ftp password
           password: ${{ secrets.FTP_PASSWORD }}
-          # Delete all the files inside of the remote directory.
-          delete: true # optional, default is false
+          # Server port to connect to (read your web hosts docs)
+          port: 21 # optional
+          # protocol to deploy with - ftp, ftps, or ftps-legacy
+          protocol: ftp # optional
+          # Folder to upload from, must end with trailing slash /
+          #local-dir: # optional
+          # Path to upload to on the server. Must end with trailing slash /
+          #server-dir: # optional
+          # Path and name of the state file - this file is used to track which files have been deployed
+          #state-name: # optional
+          # Prints which modifications will be made with current config options, but doesnt actually make any changes
+          #dry-run: # optional
+          # Deletes ALL contents of server-dir, even items in excluded with exclude argument
+          dangerous-clean-slate: true
+          # An array of glob patterns, these files will not be included in the publish/delete process
+          #exclude: # optional
+          # How verbose should the information be - minimal, standard, or verbose
+          #log-level: # optional
+          # strict or loose
+          #security: # optional
+          # Timeout in milliseconds for FTP operations
+          #timeout: # optional
