--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,9 +32,9 @@ jobs:
           # protocol to deploy with - ftp, ftps, or ftps-legacy
           protocol: ftp # optional
           # Folder to upload from, must end with trailing slash /
-          local-dir: / # optional
+          local-dir: ./ # optional
           # Path to upload to on the server. Must end with trailing slash /
-          #server-dir: # optional
+          server-dir: ./
           # Path and name of the state file - this file is used to track which files have been deployed
           #state-name: # optional
           # Prints which modifications will be made with current config options, but doesnt actually make any changes
