--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -18,6 +18,7 @@ jobs:
       name: ftp-deplyoment
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@master
       - name: FTP Deploy
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
