--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -36,3 +36,9 @@ jobs:
           local-dir: ./ # optional
           # Path to upload to on the server. Must end with trailing slash /
           server-dir: ./
+      - name: spa-smoke-test-action
+        # You may pin to the exact commit or the version.
+        # uses: GabrielCousin/spa-smoke-test-action@4829674fbf7bb51e2537c6e70348f3ced60d2d18
+        uses: GabrielCousin/spa-smoke-test-action@v0.3.0
+        with:
+          target-url: http://ttvbuehlertal.de
