--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -42,3 +42,5 @@ jobs:
         uses: GabrielCousin/spa-smoke-test-action@v0.3.0
         with:
           target-url: http://ttvbuehlertal.de
+          # Selector to query
+          target-selector: '#' 
