add css selector for smoke test in pipeline

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -43,4 +43,5 @@ jobs:
         with:
           target-url: http://ttvbuehlertal.de
           # Selector to query
-          target-selector: '#' 
+          # The CSS selector for the element to find
+          target-selector: "#main"
